fix: Debugging Layout error when open Contacts on mobile Layout

--- a/css/css_main/contacts/main-content.css
+++ b/css/css_main/contacts/main-content.css
@@ -20,7 +20,7 @@
 #right-section {
     transform: translateX(100%);
     opacity: 0;
-    transition: transform 0.4s cubic-bezier(0.22, 0.61, 0.36, 1), opacity 0.3s;
+    transition: transform 0.3s ease, opacity 0.3s ease;
     width: auto;
     padding: 2rem 0 0 2rem;
     z-index: 900;
